--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
     "react-qr-code": "^2.0.15",
+    "react-timeago": "^7.2.0",
     "stripe": "^17.4.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
